# data-diff-viz

./: .gitignore  Cargo.toml  Justfile  README.md
.codex/environments/: environment.toml
benches/: compare_bench.rs  gen_demo_data.rs  rand_lite.rs
src/: align.rs  compare.rs  dataset.rs  grid.rs  lib.rs  load.rs  logger.rs  main.rs  server.rs
src/ui/: index.html  mod.rs
tests/: e2e.rs
