[package]
name = "data-diff-viz"
version = "0.1.0"
edition = "2021"
authors = ["Stan <guner.stan@gmail.com>"]
description = "Visual cell-by-cell diff for two parquet dataframes, served as a zoomable web visualization"
license = "Apache-2.0"
keywords = ["parquet", "diff", "visualization", "dataframe"]
categories = ["command-line-utilities", "visualization"]
autobenches = false
default-run = "data-diff-viz"

[lib]
name = "data_diff_viz"
path = "src/lib.rs"

[[bin]]
name = "data-diff-viz"
path = "src/main.rs"

[[bin]]
name = "gen-demo-data"
path = "benches/gen_demo_data.rs"

[dependencies]
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
anyhow = "1.0"
thiserror = "1.0"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "fs", "signal"] }
polars = { version = "0.45", default-features = false, features = ["parquet", "dtype-full", "lazy"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.profiling]
inherits = "release"
debug = true

[[bench]]
name = "compare_bench"
harness = false
